assorted spacing issues

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -44,11 +44,6 @@ body {
   background-color: $color-bg-light;
 }
 
-p {
-  margin-bottom: $spacing-md;
-  color: $color-text-dark;
-}
-
 a {
   color: $color-forest;
   text-decoration: none;
